--- a/app/globals.css
+++ b/app/globals.css
@@ -5,4 +5,40 @@
 * {
   padding:0;
   margin: 0;
+  background-color: black;
+  color: white;
+}
+
+button {
+  margin-top: 5%;
+  background: transparent;
+  cursor: pointer;
+  border: 2px solid white;
+  color: white;
+  height: 200px;
+  width: 200px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 100%;
+  text-transform: uppercase;
+  font-size: 20px;
+  line-height: 30px;
+  animation: ripple 1.5s linear infinite;
+  transition: all 0.7s ease;
+}
+button:hover {
+  transform: scale(1.1);
+}
+button:focus {
+  outline: none;
+}
+@keyframes ripple {
+  0% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.3), 0 0 0 1px rgba(255, 255, 255, 0.3), 0 0 0 3px rgba(255, 255, 255, 0.3), 0 0 0 5px rgba(255, 255, 255, 0.3);
+ }
+  100% {
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.3), 0 0 0 4px rgba(255, 255, 255, 0.3), 0 0 0 20px rgba(255, 255, 255, 0), 0 0 0 30px rgba(255, 255, 255, 0);
+ }
 }
